--- a/tiny-model.Rmd
+++ b/tiny-model.Rmd
@@ -19,12 +19,10 @@ data(crickets, package = "modeldata")
 names(crickets)
 ```
 
-## Including Plots
+## What is that sound?
 
-You can also embed plots, for example:
+In this report, we examine what factors predict a cricket's chirp rate.
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r summary, echo = FALSE}
+summary(crickets)
+``` 
