--- a/tiny-model.Rmd
+++ b/tiny-model.Rmd
@@ -33,3 +33,16 @@ ggplot(crickets, aes(x = rate)) +
 
 The number of observations is 31, there are two species of crickets in dataset (14 observations and 17 observations).
 The temperature range is 13.2 (=30.4-17.2), the mean rate of chirping is 72.89.
+
+## Temperature affects chirp rate
+
+```{r temp, echo= FALSE}
+ggplot(crickets, aes(x = temp, y = rate)) +
+  geom_point() + 
+  geom_smooth(method = 'lm') +
+  ggtitle("Plot of temperature and chirp rate") +
+  ylab('Chirp rate (per min.)') +
+  xlab('Temperature (Celsius)')
+```
+
+Based on a scatter plot of temperature and chirping, it seems that as temperature increases, the rate of chirping also increases.
